<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/HomeFragment"
            android:icon="@drawable/ic_home_button"
            android:title="@string/menu_home" />

        <item android:title="@string/menu_zoo_info">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/ZooOutDoorFragment"
                        android:icon="@drawable/ic_outdoor"
                        android:title="@string/menu_outdoor" />

                    <item
                        android:id="@+id/ZooInDoorFragment"
                        android:icon="@drawable/ic_indoor"
                        android:title="@string/menu_indoor" />

                </group>
            </menu>
        </item>

    </group>

</menu>