<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.test.zoo.fragment.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/ZooOutDoorFragment"
        android:name="com.test.zoo.fragment.OutDoorCategoryFragment"
        android:label="@string/menu_outdoor"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/ZooInDoorFragment"
        android:name="com.test.zoo.fragment.InDoorCategoryFragment"
        android:label="@string/menu_indoor"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.test.zoo.fragment.SectionDetailFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>

    </fragment>

    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.test.zoo.fragment.PlantDetailFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third"/>
</navigation>