<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="plantInfo"
            type="com.test.zoo.database.PlantTuple" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.PlantDetailFragment">

        <!--ImageView
            android:id="@+id/iv_tutorial"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:imgUrl="@{plantInfo.pic1Url}"/-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_padding">

            <TextView
                android:id="@+id/tv_title_name_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/title_name_en"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/tv_name_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title_name_en"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@{plantInfo.nameEn}"/>

            <TextView
                android:id="@+id/tv_title_also_known"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_top_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_en"
                android:text="@string/title_also_known"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/tv_also_known"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_also_known"
                android:text="@{plantInfo.alsoKnown}"/>

            <TextView
                android:id="@+id/tv_title_name_brief"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_top_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_also_known"
                android:text="@string/title_brief"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/tv_name_brief"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_name_brief"
                android:text="@{plantInfo.brief}"/>

            <TextView
                android:id="@+id/tv_title_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_top_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_brief"
                android:text="@string/title_plant"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/tv_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_plant"
                android:text="@{plantInfo.feature}"/>

            <TextView
                android:id="@+id/tv_title_function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_top_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_plant"
                android:text="@string/title_function"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/tv_function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_function"
                android:text="@{plantInfo.app}"/>

            <TextView
                android:id="@+id/tv_title_update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_top_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_function"
                android:text="@string/title_update_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/tv_update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_update_date"
                android:text="@{plantInfo.update}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>